--- a/RepositoryViewer/Base.lproj/Main.storyboard
+++ b/RepositoryViewer/Base.lproj/Main.storyboard
@@ -77,18 +77,45 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mjI-sn-RQN">
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="mjI-sn-RQN">
                                 <rect key="frame" x="0.0" y="64" width="375" height="56"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="tJf-Qx-VfA">
+                                <rect key="frame" x="0.0" y="120" width="375" height="547"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" id="Ddj-UE-byr">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Ddj-UE-byr" id="IiS-gn-3CE">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="qUa-ON-Esh" id="nEi-Ur-3iM"/>
+                                    <outlet property="delegate" destination="qUa-ON-Esh" id="2Go-Ja-YVh"/>
+                                </connections>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="tJf-Qx-VfA" firstAttribute="trailing" secondItem="vJt-c2-Ojg" secondAttribute="trailing" id="3Rp-K2-Gqw"/>
+                            <constraint firstItem="tJf-Qx-VfA" firstAttribute="bottom" secondItem="vJt-c2-Ojg" secondAttribute="bottom" id="FNB-Dc-dDR"/>
+                            <constraint firstItem="mjI-sn-RQN" firstAttribute="leading" secondItem="vJt-c2-Ojg" secondAttribute="leading" id="PAW-4J-emS"/>
+                            <constraint firstItem="mjI-sn-RQN" firstAttribute="top" secondItem="vJt-c2-Ojg" secondAttribute="top" id="fD5-R3-6yz"/>
+                            <constraint firstItem="tJf-Qx-VfA" firstAttribute="leading" secondItem="vJt-c2-Ojg" secondAttribute="leading" id="gL3-G6-3BN"/>
+                            <constraint firstItem="tJf-Qx-VfA" firstAttribute="top" secondItem="mjI-sn-RQN" secondAttribute="bottom" id="imY-z2-zbb"/>
+                            <constraint firstItem="mjI-sn-RQN" firstAttribute="trailing" secondItem="vJt-c2-Ojg" secondAttribute="trailing" id="oBi-k3-dKe"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="vJt-c2-Ojg"/>
                     </view>
                     <connections>
                         <outlet property="searchBar" destination="mjI-sn-RQN" id="LaM-bW-crf"/>
                         <outlet property="searchDisplayController" destination="2Hy-8o-xcn" id="y6D-s9-Vwf"/>
+                        <outlet property="tableView" destination="tJf-Qx-VfA" id="gxp-ZI-cn3"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Yi7-XZ-mth" userLabel="First Responder" sceneMemberID="firstResponder"/>
